--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!-- Nginx in the VU base image will insert AppDynamics script tags under the <head> tag -->
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!-- Typeface -->
         <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-        <!-- <script src="/appd_agent.js"></script> -->
-        <!-- <script src="//cdn.appdynamics.com/adrum/adrum&#45;4.5.9.2098.js"></script> -->
         <title>Nexus Portal</title>
     </head>
     <body>
