PORT-3286: single spa setup: make basic registration ready

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
         <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
         <title>Nexus Portal</title>
+        <script type="systemjs-importmap" src="/singleSpaApps.json"></script>
+        <script src="https://cdn.jsdelivr.net/npm/systemjs/dist/system.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/systemjs/dist/extras/named-exports.min.js"></script>
     </head>
     <body>
         <noscript>
