--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
             crossorigin="anonymous"
         />
         <title>Nexus Portal</title>
-        <script type="systemjs-importmap" src="/singleSpaApps.json"></script>
+        <script type="systemjs-importmap" src="/importMap.json"></script>
         <script src="https://cdn.jsdelivr.net/npm/systemjs/dist/system.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/systemjs/dist/extras/named-exports.min.js"></script>
     </head>
