--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- Nginx in the VU base image will insert AppDynamics script tags under the <head> tag -->
+    <!-- Nginx in the VU base image will insert AppDynamics script tags under the <head> tag -->
 
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <!-- Typeface -->
-    <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
-        integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://unpkg.com/primeicons/primeicons.css" />
-    <title>Nexus Portal</title>
-</head>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <!-- Typeface -->
+        <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet" />
+        <link
+            rel="stylesheet"
+            href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+            integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+            crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="https://unpkg.com/primeicons/primeicons.css" />
+        <title>Nexus Portal</title>
+    </head>
 
-<body>
-    <noscript>
-        You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="app"></div>
-    <script>
+    <body>
+        <noscript>
+            You need to enable JavaScript to run this app.
+        </noscript>
+        <div id="app"></div>
+        <script>
             // __PRELOADED_STATE__
-    </script>
-</body>
-
+        </script>
+    </body>
 </html>
